# EE98

./: CMakeLists.txt  README.md  distance.txt  extrinsics.yml  fabfile.py  find_dist.cpp  intrinsics.yml  pic_display.py  pics.xml  platinum.py  rasppics.xml  result_display.py  stereo_calib.cpp  stereo_rect.cpp
Batch1_2.5InchSquares/: Thumbs.db
OpenCV_Components/: CMakeCache.txt  Makefile  cmake_install.cmake  find_dist  find_dist.cpp  stereo_calib  stereo_rect  stereo_rect.cpp
XMLGeneration/: calibPics.xml  generateXML.py
user_pictures_rect/: coords.txt
