cmake_minimum_required(VERSION 2.8)
project( stereo_calib )
find_package( OpenCV REQUIRED )
add_executable( stereo_calib stereo_calib.cpp )
target_link_libraries( stereo_calib ${OpenCV_LIBS} )
add_executable( find_dist find_dist.cpp )
target_link_libraries( find_dist ${OpenCV_LIBS} )
add_executable( stereo_rect stereo_rect.cpp )
target_link_libraries( stereo_rect ${OpenCV_LIBS} )
